unpackaged/main/default/objects/EmailLog__c/EmailLog__c.object-meta.xml
<CustomObject>
    <label>EmailLog</label>
    <nameField>
        <label>EmailLog</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EmailLog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>