unpackaged/main/default/objects/EmailLog__c/fields/Bytes_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Bytes_Transferred__c</fullName>
    <label>Bytes Transferred</label>
    <length>255</length>
    <type>Text</type>
</CustomField>