unpackaged/main/default/objects/EmailLog__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <label>Date/Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>