unpackaged/main/default/objects/EmailLog__c/fields/Delivery_Stage__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Stage__c</fullName>
    <label>Delivery Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>