unpackaged/main/default/objects/EmailLog__c/fields/Delivery_Status_Notification__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status_Notification__c</fullName>
    <label>Delivery Status Notification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>