unpackaged/main/default/objects/EmailLog__c/fields/DKIM_Domain__c.field-meta.xml
<CustomField>
    <fullName>DKIM_Domain__c</fullName>
    <label>DKIM Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>