unpackaged/main/default/objects/EmailLog__c/fields/DKIM_Selector__c.field-meta.xml
<CustomField>
    <fullName>DKIM_Selector__c</fullName>
    <label>DKIM Selector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>