unpackaged/main/default/objects/EmailLog__c/fields/DKIM_Success__c.field-meta.xml
<CustomField>
    <fullName>DKIM_Success__c</fullName>
    <label>DKIM Success</label>
    <length>255</length>
    <type>Text</type>
</CustomField>