unpackaged/main/default/objects/EmailLog__c/fields/DomainKeys_Status__c.field-meta.xml
<CustomField>
    <fullName>DomainKeys_Status__c</fullName>
    <label>DomainKeys Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>