unpackaged/main/default/objects/EmailLog__c/fields/Email_Direction__c.field-meta.xml
<CustomField>
    <fullName>Email_Direction__c</fullName>
    <label>Email Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>