unpackaged/main/default/objects/EmailLog__c/fields/EmailMessageId__c.field-meta.xml
<CustomField>
    <fullName>EmailMessageId__c</fullName>
    <label>EmailMessageId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>