unpackaged/main/default/objects/EmailLog__c/fields/Header_From__c.field-meta.xml
<CustomField>
    <fullName>Header_From__c</fullName>
    <label>Header From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>