unpackaged/main/default/objects/EmailLog__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>EmailLog</relationshipLabel>
    <relationshipName>EmailLog</relationshipName>
    <type>Lookup</type>
</CustomField>