unpackaged/main/default/objects/EmailLog__c/fields/Internal_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Internal_Message_ID__c</fullName>
    <label>Internal Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>