unpackaged/main/default/objects/EmailLog__c/fields/Mail_Event__c.field-meta.xml
<CustomField>
    <fullName>Mail_Event__c</fullName>
    <label>Mail Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>