unpackaged/main/default/objects/EmailLog__c/fields/Message_ID_Header__c.field-meta.xml
<CustomField>
    <fullName>Message_ID_Header__c</fullName>
    <label>Message ID Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>