unpackaged/main/default/objects/EmailLog__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>