unpackaged/main/default/objects/EmailLog__c/fields/RelatedToId__c.field-meta.xml
<CustomField>
    <fullName>RelatedToId__c</fullName>
    <label>RelatedToId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>