unpackaged/main/default/objects/EmailLog__c/fields/Relay_Address__c.field-meta.xml
<CustomField>
    <fullName>Relay_Address__c</fullName>
    <label>Relay Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>