unpackaged/main/default/objects/EmailLog__c/fields/Relay_Port__c.field-meta.xml
<CustomField>
    <fullName>Relay_Port__c</fullName>
    <label>Relay Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>