unpackaged/main/default/objects/EmailLog__c/fields/Remote_Host__c.field-meta.xml
<CustomField>
    <fullName>Remote_Host__c</fullName>
    <label>Remote Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>