unpackaged/main/default/objects/EmailLog__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <label>Retry Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>