unpackaged/main/default/objects/EmailLog__c/fields/Seconds_In_Queue__c.field-meta.xml
<CustomField>
    <fullName>Seconds_In_Queue__c</fullName>
    <label>Seconds In Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>