unpackaged/main/default/objects/EmailLog__c/fields/SenderID_Status__c.field-meta.xml
<CustomField>
    <fullName>SenderID_Status__c</fullName>
    <label>SenderID Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>