unpackaged/main/default/objects/EmailLog__c/fields/Sent_via_TLS__c.field-meta.xml
<CustomField>
    <fullName>Sent_via_TLS__c</fullName>
    <label>Sent via TLS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>