unpackaged/main/default/objects/EmailLog__c/fields/SPF_Status__c.field-meta.xml
<CustomField>
    <fullName>SPF_Status__c</fullName>
    <label>SPF Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>