unpackaged/main/default/objects/EmailLog__c/fields/TLS_Cipher__c.field-meta.xml
<CustomField>
    <fullName>TLS_Cipher__c</fullName>
    <label>TLS Cipher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>