unpackaged/main/default/objects/EmailLog__c/fields/TLS_Option__c.field-meta.xml
<CustomField>
    <fullName>TLS_Option__c</fullName>
    <label>TLS Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>