unpackaged/main/default/objects/EmailLog__c/fields/TLS_Verified__c.field-meta.xml
<CustomField>
    <fullName>TLS_Verified__c</fullName>
    <label>TLS Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>