unpackaged/main/default/objects/EmailLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DateTime__c</columns>
    <columns>Internal_Message_ID__c</columns>
    <columns>Mail_Event__c</columns>
    <columns>Recipient__c</columns>
    <columns>Sender__c</columns>
    <columns>Remote_Host__c</columns>
    <columns>Bytes_Transferred__c</columns>
    <columns>User_ID__c</columns>
    <columns>Message_ID_Header__c</columns>
    <columns>Retry_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>